<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.gluonhq.scenebuilder</groupId>
    <artifactId>parent</artifactId>
    <packaging>pom</packaging>
    <version>16.0.0-SNAPSHOT</version>
    <name>Scene Builder</name>
    <description>Scene Builder is a visual, drag n drop, layout tool for designing JavaFX application user interfaces</description>
    <inceptionYear>2012</inceptionYear>
    <url>https://github.com/gluonhq/scenebuilder</url>

    <modules>
        <module>kit</module>
        <module>app</module>

        <module>certificate-manager</module>
        <module>content-editor</module>
        <module>controls</module>
        <module>controls-tooling</module>
        <module>core</module>
        <module>css-analyser</module>
        <module>debug-menu</module>
        <module>defaultx</module>
        <module>dev-utils</module>
        <module>document</module>
        <module>drag-and-drop</module>
        <module>editors</module>
        <module>exporter</module>
        <module>extension-api</module>
        <module>extension-library</module>
        <module>filesystem</module>
        <module>gluon</module>
        <module>help-features</module>
        <module>inspector</module>
        <module>jobs</module>
        <module>library</module>
        <module>preference-editor</module>
        <module>preview</module>
        <module>sb</module>
        <module>source-gen</module>
        <module>source-view</module>
        <module>templates</module>
        <module>update-manager</module>
        <module>log-viewer</module>
    </modules>

    <properties>
        <javafx.version>16</javafx.version>
        <aether.version>1.1.0</aether.version>
        <charm.glisten.version>5.0.0-jdk9</charm.glisten.version>
        <maven.compiler.release>11</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.7.0</junit.version>
        <junit-platform.version>1.7.1</junit-platform.version>

    </properties>

    <repositories>
        <repository>
            <id>sonatype-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>gluon-nexus</id>
            <url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
        </repository>
    </repositories>


    <dependencies>
        <!-- JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- Eclipse Aether -->
        <dependency>
            <groupId>org.eclipse.aether</groupId>
            <artifactId>aether-api</artifactId>
            <version>${aether.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.aether</groupId>
            <artifactId>aether-impl</artifactId>
            <version>${aether.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.aether</groupId>
            <artifactId>aether-connector-basic</artifactId>
            <version>${aether.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.aether</groupId>
            <artifactId>aether-transport-file</artifactId>
            <version>${aether.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.aether</groupId>
            <artifactId>aether-transport-http</artifactId>
            <version>${aether.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-aether-provider</artifactId>
            <version>3.3.9</version>
        </dependency>

        <!-- Gluon Charm Glisten -->
        <dependency>
            <groupId>com.gluonhq</groupId>
            <artifactId>charm-glisten</artifactId>
            <version>${charm.glisten.version}</version>
        </dependency>

        <!-- Rest API -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.2</version>
        </dependency>
        <dependency>
            <groupId>javax.json</groupId>
            <artifactId>javax.json-api</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.json</artifactId>
            <version>1.0.4</version>
            <scope>runtime</scope>
        </dependency>

        <!-- X -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.11</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <version>2.3.4.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>io.reactivex.rxjava2</groupId>
            <artifactId>rxjava</artifactId>
            <version>2.2.20</version>
        </dependency>
        <dependency>
            <groupId>io.reactivex.rxjava2</groupId>
            <artifactId>rxjavafx</artifactId>
            <version>2.2.2</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.11.3</version>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>2.3.4.RELEASE</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>${junit-platform.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mock-server</groupId>
            <artifactId>mockserver-junit-jupiter</artifactId>
            <version>5.11.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.16</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>kit</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>certificate-manager</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>content-editor</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>controls</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>controls-tooling</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>css-analyser</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>debug-menu</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>defaultx</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>document</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>drag-and-drop</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>editors</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>exporter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>extension-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>extension-library</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>filesystem</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>gluon</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>help-features</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>inspector</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>jobs</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>library</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>preference-editor</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>preview</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>sb</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>source-gen</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>source-view</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>templates</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>update-manager</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gluonhq.scenebuilder</groupId>
                <artifactId>log-viewer</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-maven-plugin</artifactId>
                    <version>0.0.5</version>
                    <configuration>
                        <mainClass>${main.class.name}</mainClass>
                        <options>
                            <option>--add-opens=javafx.fxml/javafx.fxml=ALL-UNNAMED</option>
                        </options>
                    </configuration>
                </plugin>

                <!-- Build KIT wherever parent is cleaned -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <useIncrementalCompilation>false</useIncrementalCompilation>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>1.18.16</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>


                <!-- Deploy to Maven Central -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.0.0-M1</version>
                    <configuration>
                        <skip>true</skip>
                    </configuration>
                    <inherited>false</inherited>
                </plugin>

                <!-- Testing -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.0</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>2.22.0</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

    <organization>
        <name>Gluon</name>
        <url>https://www.gluonhq.com</url>
    </organization>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/gluonhq/ChatApp/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <name>BSD 3-Clause</name>
            <url>https://opensource.org/licenses/BSD-3-Clause</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Abhinay Agarwal</name>
            <email>abhinay.agarwal@gluonhq.com</email>
            <organization>Gluon</organization>
            <organizationUrl>https://www.gluonhq.com</organizationUrl>
        </developer>
        <developer>
            <name>Joeri Sykora</name>
            <email>joeri.sykora@gluonhq.com</email>
            <organization>Gluon</organization>
            <organizationUrl>https://www.gluonhq.com</organizationUrl>
        </developer>
        <developer>
            <name>José Pereda</name>
            <email>jose.pereda@gluonhq.com</email>
            <organization>Gluon</organization>
            <organizationUrl>https://www.gluonhq.com</organizationUrl>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/gluonhq/scenebuilder</url>
        <connection>scm:git:git://github.com/gluonhq/scenebuilder.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:gluonhq/scenebuilder.git</developerConnection>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

</project>